Add my AMX sgemm implemention into benchmark

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -19,12 +19,8 @@ elseif(BACKEND STREQUAL "Accelerate")
   find_package(BLAS REQUIRED)
   target_link_libraries(gemm_bench PRIVATE BLAS::BLAS)
   target_compile_definitions(gemm_bench PRIVATE USE_ACCELERATE)
-elseif(BACKEND STREQUAL "Eigen")
-  find_package(Eigen3 REQUIRED)
-  find_package(OpenMP REQUIRED)
-  target_link_libraries(gemm_bench PRIVATE Eigen3::Eigen)
-  target_link_libraries(gemm_bench PRIVATE OpenMP::OpenMP_CXX)
-  target_compile_definitions(gemm_bench PRIVATE USE_EIGEN)
+elseif(BACKEND STREQUAL "AMX")
+  target_compile_definitions(gemm_bench PRIVATE USE_AMX)
 elseif(BACKEND STREQUAL "Metal")
   enable_language(OBJCXX)
   set_source_files_properties(main.cpp PROPERTIES LANGUAGE OBJCXX)
