Transform Matrix A and B's data layout to speed up sgemm.
amx_sgemm.2.h transforms A[m][k] to A[m/16][k][16], and the new dimension is 16 adjacent column column elements. For a k loop using fma32, C[i:i+16][j:j+64] is done.

amx_sgemm.3.h transforms A[m][k] to A[m/32][k][32], and B[k][n] to B[n/32][k][32]. For a k loop using fma32, C[i:i+32][j:j+32] is done.

move amx_sgemm.h to amx_sgemm.1.h, and it is included in amx_sgemm.h.

test amx_sgemm.1.h, amx_sgemm.2.h and amx_sgemm.3.h in benchmark

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -19,8 +19,12 @@ elseif(BACKEND STREQUAL "Accelerate")
   find_package(BLAS REQUIRED)
   target_link_libraries(gemm_bench PRIVATE BLAS::BLAS)
   target_compile_definitions(gemm_bench PRIVATE USE_ACCELERATE)
-elseif(BACKEND STREQUAL "AMX")
-  target_compile_definitions(gemm_bench PRIVATE USE_AMX)
+elseif(BACKEND STREQUAL "AMX_1")
+  target_compile_definitions(gemm_bench PRIVATE USE_AMX=1)
+elseif(BACKEND STREQUAL "AMX_2")
+  target_compile_definitions(gemm_bench PRIVATE USE_AMX=2)
+elseif(BACKEND STREQUAL "AMX_3")
+  target_compile_definitions(gemm_bench PRIVATE USE_AMX=3)
 elseif(BACKEND STREQUAL "Metal")
   enable_language(OBJCXX)
   set_source_files_properties(main.cpp PROPERTIES LANGUAGE OBJCXX)
